🚧 Assign global z-index to order-cta to prevent it from being overlapped

--- a/styles/constants/_z-indexes.scss
+++ b/styles/constants/_z-indexes.scss
@@ -1,7 +1,9 @@
-$gnb-level: 50;
-$lnb-level: 40;
+$gnb-level: 60;
+$lnb-level: 50;
 $product-tab-level: 30;
 
 $overlay-level: 100;
 $sidebar-level: 200;
 $search-modal-level: 300;
+
+$order-cta-level: 40;
